<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/uuidText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/uuid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/uuid"
        tools:text="2e49c10a-1866-4f63-8870-655a3184a055"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/uuidText" />

    <TextView
        android:id="@+id/userNameText"
        android:text="@string/userName"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/uuid" />

    <TextView
        android:id="@+id/userName"
        tools:text="ShoukoTGK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/userNameText" />

    <TextView
        android:id="@+id/passwordText"
        android:text="@string/password"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/password"
        tools:text="pass2344"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/passwordText" />

    <TextView
        android:id="@+id/saltText"
        android:text="@string/salt"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/salt"
        tools:text="dHyA8AmV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/saltText" />

    <TextView
        android:id="@+id/md5Text"
        android:text="@string/md5"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/salt" />

    <TextView
        android:id="@+id/md5"
        tools:text="ee4741a217bf42897734fdff5bb44276"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/md5Text" />

    <TextView
        android:id="@+id/sha1Text"
        android:text="@string/sha1"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/md5" />

    <TextView
        android:id="@+id/sha1"
        tools:text="59f702aa8993cc7740bfb2a260729f32a2632a36"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/sha1Text" />

    <TextView
        android:id="@+id/sha256Text"
        android:text="@string/sha256"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/sha1" />

    <TextView
        android:id="@+id/sha256"
        tools:text="10eacdf3e06305eb1756ab7430060388ad3d6113c395846871c997bf1a365757"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/uuidText"
        app:layout_constraintTop_toBottomOf="@+id/sha256Text" />


</androidx.constraintlayout.widget.ConstraintLayout>