<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/countryText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/country"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/country"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        tools:text="Japan"
        app:layout_constraintStart_toStartOf="@+id/countryText"
        app:layout_constraintTop_toBottomOf="@id/countryText" />

    <TextView
        android:id="@+id/stateText"
        android:text="@string/state"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/countryText"
        app:layout_constraintTop_toBottomOf="@+id/country" />

    <TextView
        android:id="@+id/state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        tools:text="Tokyo"
        app:layout_constraintStart_toStartOf="@+id/countryText"
        app:layout_constraintTop_toBottomOf="@id/stateText" />

    <TextView
        android:id="@+id/cityText"
        android:text="@string/city"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/countryText"
        app:layout_constraintTop_toBottomOf="@+id/state" />

    <TextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        tools:text="Hokkaido"
        app:layout_constraintStart_toStartOf="@+id/countryText"
        app:layout_constraintTop_toBottomOf="@id/cityText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/streetZipCodeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@+id/city">

        <Space
            android:id="@+id/streetZipCodeSpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="16dp"
            android:layout_height="8dp"/>
        <TextView
            android:id="@+id/streetText"
            android:text="@string/street"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/streetZipCodeSpace"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/street"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="streetExample"
            app:layout_constraintStart_toStartOf="@id/streetText"
            app:layout_constraintEnd_toStartOf="@+id/streetZipCodeSpace"
            app:layout_constraintTop_toBottomOf="@id/streetText" />

        <TextView
            android:id="@+id/zipCodeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/zipCode"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/streetZipCodeSpace"/>

        <TextView
            android:id="@+id/zipCode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="98838"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/zipCodeText"
            app:layout_constraintTop_toBottomOf="@id/zipCodeText" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/coordinatesText"
        android:text="@string/coordinates"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/streetZipCodeLayout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/coordinatesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@+id/coordinatesText"
        app:layout_constraintStart_toStartOf="@+id/coordinatesText">

        <Space
            android:id="@+id/coordinatesSpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="16dp"
            android:layout_height="8dp"/>

        <TextView
            android:id="@+id/longitudeText"
            android:text="@string/longitude"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/coordinatesSpace"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="64.5673"
            app:layout_constraintStart_toStartOf="@id/longitudeText"
            app:layout_constraintEnd_toStartOf="@+id/coordinatesSpace"
            app:layout_constraintTop_toBottomOf="@id/longitudeText" />

        <TextView
            android:id="@+id/latitudeText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/coordinatesSpace"/>

        <TextView
            android:id="@+id/latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="-142.7408"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/latitudeText"
            app:layout_constraintTop_toBottomOf="@id/latitudeText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/timeZoneText"
        android:text="@string/timeZone"
        android:textStyle="bold"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/coordinatesLayout"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timeZoneLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintTop_toBottomOf="@+id/timeZoneText"
        app:layout_constraintStart_toStartOf="@+id/timeZoneText">

        <Space
            android:id="@+id/timeZoneSpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="16dp"
            android:layout_height="8dp"/>

        <TextView
            android:id="@+id/offsetText"
            android:text="@string/offset"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/timeZoneSpace"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/offset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="-3:30"
            app:layout_constraintStart_toStartOf="@id/offsetText"
            app:layout_constraintEnd_toStartOf="@+id/timeZoneSpace"
            app:layout_constraintTop_toBottomOf="@id/offsetText" />

        <TextView
            android:id="@+id/descriptionText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/timeZoneDescription"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/timeZoneSpace"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Newfoundland"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/descriptionText"
            app:layout_constraintTop_toBottomOf="@id/descriptionText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>