<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/fullNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        android:text="@string/fullName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/fullName"
        tools:text="Powder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/fullNameText"
        app:layout_constraintTop_toBottomOf="@+id/fullNameText" />

    <TextView
        android:id="@+id/tittleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tittle"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="@+id/fullNameText"
        app:layout_constraintTop_toBottomOf="@+id/fullName" />

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Dr"
        app:layout_constraintStart_toStartOf="@+id/fullNameText"
        app:layout_constraintTop_toBottomOf="@id/tittleText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/genderAgeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@+id/tittle">

        <Space
            android:id="@+id/genderAgeSpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="16dp"
            android:layout_height="8dp"/>

        <TextView
            android:id="@+id/genderText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/genderAgeSpace"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/ageText"
            android:layout_width="0dp"
            android:text="@string/age"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/genderAgeSpace"/>

        <TextView
            tools:text="Female"
            android:id="@+id/gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/genderText"
            app:layout_constraintEnd_toStartOf="@+id/genderAgeSpace"
            app:layout_constraintTop_toBottomOf="@+id/genderText" />

        <TextView
            android:id="@+id/age"
            tools:text="16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ageText"
            app:layout_constraintStart_toEndOf="@+id/genderAgeSpace"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/natDobLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@+id/genderAgeLayout">

        <Space
            android:id="@+id/natDobSpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="16dp"
            android:layout_height="8dp"/>

        <TextView
            android:id="@+id/natText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/nat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/natDobSpace"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/nat"
            tools:text="Zaunite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/natText"
            app:layout_constraintTop_toBottomOf="@+id/natText"
            app:layout_constraintEnd_toStartOf="@+id/natDobSpace"/>

        <TextView
            android:id="@+id/dateOfBirthText"
            android:text="@string/dob"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/natDobSpace"/>

        <TextView
            android:id="@+id/dateOfBirth"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="2007-12-06T03:58:53.871Z"
            app:layout_constraintTop_toBottomOf="@+id/dateOfBirthText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/natDobSpace"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>