<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/emailText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="berukawaifu@gmail.com"
        app:layout_constraintStart_toStartOf="@+id/emailText"
        app:layout_constraintTop_toBottomOf="@id/emailText" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email">

        <Space
            android:id="@+id/cellPhoneSpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="16dp"
            android:layout_height="8dp"/>

        <TextView
            android:id="@+id/phoneText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/phoneNumber"
            android:textStyle="bold"
            android:layout_marginStart="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cellPhoneSpace"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="4495990021"
            app:layout_constraintStart_toStartOf="@id/phoneText"
            app:layout_constraintEnd_toStartOf="@+id/cellPhoneSpace"
            app:layout_constraintTop_toBottomOf="@id/phoneText" />

        <TextView
            android:id="@+id/cellText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/cellPhoneNumber"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cellPhoneSpace"/>

        <TextView
            android:id="@+id/cell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="4495990021"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cellText"
            app:layout_constraintTop_toBottomOf="@id/cellText" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>