<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/idText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:text="@string/id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/id"
        tools:text="2e49c10a-1866-4f63-8870-655a3184a055"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/idText"
        app:layout_constraintTop_toBottomOf="@+id/idText" />

    <TextView
        android:id="@+id/valueText"
        android:text="@string/value"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/idText"
        app:layout_constraintTop_toBottomOf="@+id/id" />

    <TextView
        android:id="@+id/value"
        tools:text="null"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/idText"
        app:layout_constraintTop_toBottomOf="@+id/valueText" />

    <TextView
        android:id="@+id/infoOfCreationText"
        android:text="@string/value"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintStart_toStartOf="@+id/idText"
        app:layout_constraintTop_toBottomOf="@+id/value" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/infoOfCreationLayout"
        android:layout_width="match_parent"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="4dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/infoOfCreationText">

        <Space
            android:id="@+id/infoOfCreationSpace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="16dp"
            android:layout_height="8dp"/>

        <TextView
            android:id="@+id/dateOfCreationText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/dateOfCreation"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/infoOfCreationSpace"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateOfCreation"
            tools:text="2007-12-06T03:58:53.871Z"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/dateOfCreationText"
            app:layout_constraintTop_toBottomOf="@+id/dateOfCreationText"
            app:layout_constraintEnd_toStartOf="@+id/infoOfCreationSpace"/>

        <TextView
            android:id="@+id/ageOfCreationText"
            android:text="@string/ageOfCreation"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/infoOfCreationSpace"/>

        <TextView
            android:id="@+id/ageOfCreation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="12"
            app:layout_constraintTop_toBottomOf="@+id/ageOfCreationText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/infoOfCreationSpace"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>